<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <Toolbar
       android:id="@+id/toolbar"
       android:layout_width="match_parent"
       android:layout_height="56dp"
       android:background="@android:color/transparent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/textView"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
       android:text="@string/currency_converter"
       android:textColor="@color/purple_700"
       android:textSize="42sp"
       app:layout_constraintEnd_toStartOf="@+id/guideline2"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/toolbar" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintGuide_percent="0.6" />

   <TextView
       android:id="@+id/from_tv"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/from"
       android:textSize="18sp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textView"
       android:layout_marginStart="16dp"
       android:layout_marginTop="36dp"/>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/textInputLayout"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
       android:layout_marginTop="8dp"
       android:layout_marginEnd="16dp"
       android:hint="@string/select_country"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/from_tv">

      <AutoCompleteTextView
          android:id="@+id/From_ac"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:inputType="none"
          android:text="American Dollar" />

   </com.google.android.material.textfield.TextInputLayout>

   <TextView
       android:id="@+id/to_tv"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/to"
       android:textSize="18sp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
       android:layout_marginTop="8dp"
       android:layout_marginStart="16dp"/>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/textInputLayout2"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
       android:layout_marginTop="8dp"
       android:layout_marginEnd="16dp"
       android:hint="@string/select_country"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/to_tv">

      <AutoCompleteTextView
          android:id="@+id/to"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:inputType="none"
          android:text="Egyptian Pound" />

   </com.google.android.material.textfield.TextInputLayout>

   <TextView
       android:id="@+id/amount"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/amount"
       android:textSize="18sp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
       android:layout_marginTop="8sp"
       android:layout_marginStart="16dp"/>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/textInputLayout3"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
       android:layout_marginTop="8dp"
       android:layout_marginEnd="16dp"
       android:hint="@string/amount"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/amount">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/editT"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="number" />
   </com.google.android.material.textfield.TextInputLayout>

   <Button
       android:id="@+id/convert_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:text="@string/convert"
       android:visibility="invisible"
       app:backgroundTint="@color/green"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

   <TextView
       android:id="@+id/textView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
       android:layout_marginTop="8dp"
       android:textStyle="bold"
       android:textSize="18sp"
       android:text="@string/result"
       android:textColor="@color/red"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/convert_button" />

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:hint="@string/converted_amount"
       android:layout_marginStart="16dp"
       android:layout_marginTop="8dp"
       android:layout_marginEnd="16dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textView3">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/result"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:enabled="false"/>
   </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>